# zecwallet-mobile

./: README.md  package.json
ios/: RPCModule.swift
rust/android/: Dockerfile
rust/lib/: Cargo.toml
scripts/: integration_tests.sh
