[package]
name = "rustlib"
version = "1.0.1"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>", "Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19", default-features = false }
zecwalletlitelib = { git="https://github.com/zingolabs/zecwalletlitelib", default-features=false, rev="d50ce9d618c1a2adc478ffbc3ad281512fbb0c15"}
lazy_static = "1.4"
android_logger = "0.11"
log = "0.4"
base64 = "0.13"
